--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="search">
           <input type="text" placeholder="Enter city name" spellcheck="false" />
           <button>
-            <img src="/images/search.png" alt="search" />
+            <img src="images/search.png" alt="search" />
           </button>
         </div>
 
@@ -21,13 +21,13 @@
         </div>
 
         <div class="weather">
-          <img src="/images/rain.png" class="weather-icon" />
+          <img src="images/rain.png" class="weather-icon" />
           <h1 class="temp">20°c</h1>
           <h2 class="city">Kathmandu</h2>
 
           <div class="details">
             <div class="col">
-              <img src="/images/humidity.png" alt="" />
+              <img src="images/humidity.png" alt="" />
               <div>
                 <p class="humidity">50%</p>
                 <p>Humidity</p>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col">
-              <img src="/images/wind.png" alt="" />
+              <img src="images/wind.png" alt="" />
               <div>
                 <p class="wind">15km/h</p>
                 <p>Wind Speed</p>
