--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="search">
           <input type="text" placeholder="Enter city name" spellcheck="false" />
           <button>
-            <img src="images/search.png" alt="search" />
+            <img src="" alt="search" />
           </button>
         </div>
 
@@ -27,7 +27,7 @@
 
           <div class="details">
             <div class="col">
-              <img src="images/humidity.png" alt="" />
+              <img src="" alt="" id="hum" />
               <div>
                 <p class="humidity">50%</p>
                 <p>Humidity</p>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col">
-              <img src="images/wind.png" alt="" />
+              <img src="" alt="" id="win" />
               <div>
                 <p class="wind">15km/h</p>
                 <p>Wind Speed</p>
